# infra

./: .pre-commit-config.yaml  AGENTS.md  SETUP.md
nomad-bootstrapper/: .clippy.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
nomad-bootstrapper/.github/workflows/: ci.yml
nomad-bootstrapper/scripts/: run_debian_integration.sh
nomad-bootstrapper/src/: config.rs  controller.rs  debian.rs  executor.rs  main.rs  models.rs  runner.rs  state.rs  system.rs  test_helpers.rs  transport.rs
nomad-bootstrapper/src/controller/: preflight.rs  provisioning.rs
nomad-bootstrapper/src/modules/: configure.rs  ensure_deps.rs  install.rs  mod.rs  setup_repo.rs  verify.rs
nomad-bootstrapper/tests/: integration_tests.rs  mocks.rs
nomad-bootstrapper/tests/fixtures/: nomad-client.hcl  nomad-server.hcl  os-release-ubuntu-jammy
scripts/: bootstrap_nomad.sh
thoughts/shared/designs/: 2026-04-16-nomad-rust-bootstrapper-design.md
